Update Janex file format documentation with improved descriptions and structure